<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_plate_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_plate_number_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_plate_number_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/tv_vin_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_vin_number_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_vin_number_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/tv_engine_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_engine_number_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_engine_number_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/tv_brand_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_brand_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_brand_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/tv_vehicle_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_type_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_vehicle_type_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/tv_engine_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_engine_type_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_engine_type_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.cardview.widget.CardView>