<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddVehicleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_add_vehicle_plate_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_vehicle_tv_plate_number"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_plate_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_vehicle_et_plate_number"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_vehicle_plate_number"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/tv_add_vehicle_vin_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_vehicle_tv_vin_number"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_plate_number" />

        <EditText
            android:id="@+id/et_vin_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_vehicle_et_vin_number"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_vehicle_vin_number"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/tv_add_vehicle_make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_vehicle_tv_make"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_vin_number" />

        <EditText
            android:id="@+id/et_brand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_vehicle_et_make"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_vehicle_make" />

        <TextView
            android:id="@+id/tv_add_vehicle_engine_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_vehicle_tv_engine_series_number"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_brand" />

        <EditText
            android:id="@+id/et_engine_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_vehicle_et_engine_series_number"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_vehicle_engine_number"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/tv_add_vehicle_vehicle_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_vehicle_tv_vehicle_type"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_engine_number" />

        <Spinner
            android:id="@+id/sp_vehicle_type"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_vehicle_vehicle_type"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tv_add_vehicle_engine_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_vehicle_tv_engine_type"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sp_vehicle_type" />

        <EditText
            android:id="@+id/et_engine_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/add_vehicle_et_engine_type"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_vehicle_engine_type" />
        
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:src="@drawable/ic_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_engine_type"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
